2009-07-20  Ingo Renner  <ingo@typo3.org>

	* Fixed bug: #11006: Tooltip for page path in Page/List module is missing (thanks to Steffen Gebert)

2009-07-19  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #6875: IRRE - Sorting of child records is inverted on moving parent record to different page (thanks to Nabil Saleh)

2009-07-09  Martin Kutschker  <masi@typo3.org>

	* Fixed bug: same error message is used twice for different errors

2009-07-08  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #11412: Using typolinkLinkAccessRestrictedPages does not take different domain names into account

2009-07-03  Michael Stucki  <michael@typo3.org>

	* Release of TYPO3 4.2.8
	* Follow-up to issue #11391: Backport of the admin button was only half-way finished, in fact it was never visible due to a missing variable

2009-07-02  Ingo Renner  <ingo@typo3.org>

	* Release of TYPO3 4.2.7

2009-07-01  Stanislas Rolland  <typo3@sjbr.ca>

	* Follow-up to issue #11009: External links get prepended with base url in RTE htmlArea in Firefox 3.0.11/3.5b4

2009-06-29  Michael Stucki  <michael@typo3.org>

	* Added feature #11391: Add a button to let admins create the file ENABLE_INSTALL_TOOL from the backend (since it is automatically removed after 1 hour since this version) - thanks to Steffen Kamper who wrote this code!

2009-06-29  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #6215: MENU before/after* might create invalid HTML output (Thanks to Nabil Saleh)

2009-06-28  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #10136: tslib_pibase page browser may hurt search engines by the incorrect "Next" link (On behalf of Dmitry Dulepov)

2009-06-23  Michael Stucki  <michael@typo3.org>

	* Fixed bug #11369: jumpUrl should only allow files matching fileDenyPattern (thanks to Ingmar Schlecht)
	* Fixed bug #11368: Ignore ENABLE_INSTALL_TOOL file if it is older than one hour

2009-05-18  Oliver Hader  <oliver@typo3.org>
